--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -4,8 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: [ master ]
-    tags:
-      - 'deployment'
+    tags: [ deployment ]
 
 jobs:
   build:
