--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -3,7 +3,7 @@ name: Gh-Pages
 on:
   workflow_dispatch:
   push:
-    tags: [ deployment-v* ]
+    tags: [ deploy-* ]
 
 jobs:
   build:
@@ -14,4 +14,5 @@ jobs:
       - uses: subosito/flutter-action@v1
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
+          webRenderer: html
           baseHref: /harmony_dashboard/
