feat(reports): Added a report system to Notion.
The details and expected fields have rtl support.

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -16,3 +16,4 @@ jobs:
         with:
           webRenderer: html
           baseHref: /harmony_dashboard/
+          customArgs: --dart-define="NOTION_TOKEN=${{ secrets.NOTION_TOKEN }}"
